adjustments to match hkpc platform

--- a/label_studio/frontend/src/components/Button/Button.styl
+++ b/label_studio/frontend/src/components/Button/Button.styl
@@ -6,7 +6,7 @@
   padding 0 16px
   outline none
   display inline-flex
-  background-color #fff
+  background-color #09f
   align-items center
   border-radius 5px
   text-align center
