--- a/label_studio/users/templates/users/new-ui/user_signup.html
+++ b/label_studio/users/templates/users/new-ui/user_signup.html
@@ -34,11 +34,11 @@
       <label for="allow_newsletters_visual" style="display: inline-block; cursor: pointer;">
 
         <input name="allow_newsletters_visual" id="allow_newsletters_visual"
-               type="checkbox" style="width: auto" checked="true"
+               type="checkbox" style="width: auto"
                onchange="document.getElementById('allow_newsletters').value=document.getElementById('allow_newsletters_visual').checked">
-        Get the latest news from Heidi
-        <img src="{{ settings.HOSTNAME }}{% static 'images/heidi.png' %}" alt="Heidi"
-             width="25" style="display: inline; margin: 0; position: relative; top: 5px; left: 0px">
+        Get the latest news from platform
+<!--        <img src="{{ settings.HOSTNAME }}{% static 'images/heidi.png' %}" alt="Heidi"-->
+<!--             width="25" style="display: inline; margin: 0; position: relative; top: 5px; left: 0px">-->
 
       </label>
     </div>
