--- a/label_studio/frontend/src/components/Menubar/Menubar.styl
+++ b/label_studio/frontend/src/components/Menubar/Menubar.styl
@@ -12,7 +12,7 @@
   position sticky
   display flex
   box-sizing border-box
-  background-color #fff
+  background-color #404040
   justify-content space-evenly
   border-bottom 1px solid rgba(0, 0, 0, 0.1)
 
