--- a/label_studio/frontend/src/pages/DataManager/DataManager.styl
+++ b/label_studio/frontend/src/pages/DataManager/DataManager.styl
@@ -3,4 +3,5 @@
 
   // hack to change background of selected annotation in LSF inside DM
   #label-studio-dm [class*=Annotations_annotation_selected]
-    background: #e3f1ff
+    background: #404040
+
