--- a/label_studio/frontend/src/pages/Projects/Projects.styl
+++ b/label_studio/frontend/src/pages/Projects/Projects.styl
@@ -1,6 +1,6 @@
 .projects-page
   min-height calc(100vh - var(--header-height))
-  background-color #FAFAFA
+  background-color #303030
 
   &__loading
     width 100%
@@ -20,13 +20,13 @@
     grid-template-columns repeat(4, 1fr)
 
   &__link
-    color #000
+    color #404040
     display block
     display flex
     text-decoration none
 
     &:hover
-      color #000
+      color #404040
 
   &__pages
     bottom 0
@@ -36,7 +36,7 @@
     padding 10px 40px
     justify-content flex-end
     box-sizing border-box
-    background-color #fafafa
+    background-color #303030
 
   @media (min-width 1200px)
     &__list
@@ -70,11 +70,11 @@
     margin 72px 0 32px
 
 .project-card
-  --text-color #000
+  --text-color #fff
   flex 1
   display flex
   flex-direction column
-  background #FFFFFF
+  background #404040
   box-shadow 0px 1px 2px rgba(0, 0, 0, 0.15)
   border-radius 4px
   overflow hidden
@@ -168,7 +168,7 @@
     justify-content space-between
 
   &__created-date
-    color rgba(#000, 0.4)
+    color rgba(255, 255, 255, 0.7)
     font-size: 90%
 
     & > span
@@ -176,15 +176,15 @@
 
   &_colored
     --text-color #fff
-    background-color var(--background-color)
+    background-color #404040
 
   &_colored ^[0]
     &__header
-      background-color var(--header-color)
+      background-color #404040
       box-shadow none
 
     &__detail
       &-item
-        --icon-color #fff
+        --icon-color #404040
 
 
